--- a/Nethereum.UI/Nethereum.UI.Core/Nethereum.UI.Core.csproj
+++ b/Nethereum.UI/Nethereum.UI.Core/Nethereum.UI.Core.csproj
@@ -1,24 +1,24 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard1.3</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <PackageTargetFallback>$(PackageTargetFallback);portable-net45+netcore45+wpa81+MonoAndroid10+Xamarin.iOS10</PackageTargetFallback>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DebugType>portable</DebugType>
+    <DebugType>pdbonly</DebugType>
     <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MvvmCross" Version="5.0.2">
+    <PackageReference Include="MvvmCross" Version="6.0.1">
     </PackageReference>
-    <PackageReference Include="MvvmCross.Forms" Version="5.0.2">
+    <PackageReference Include="MvvmCross.Forms" Version="6.0.1">
     </PackageReference>
-    <PackageReference Include="MvvmCross.Plugin.Messenger" Version="5.0.2" />
-    <PackageReference Include="Nethereum.StandardTokenEIP20" Version="2.0.1" />
-    <PackageReference Include="Xam.Plugins.Forms.ImageCircle" Version="1.8.1" />
-    <PackageReference Include="Xamarin.Forms" Version="2.4.0.282" />
+    <PackageReference Include="MvvmCross.Plugin.Messenger" Version="6.0.1" />
+    <PackageReference Include="Nethereum.StandardTokenEIP20" Version="2.5.1" />
+    <PackageReference Include="Xam.Plugins.Forms.ImageCircle" Version="3.0.0.5" />
+    <PackageReference Include="Xamarin.Forms" Version="3.0.0.530893" />
   </ItemGroup>
 
   <ItemGroup>
