--- a/Nethereum.UI/Nethereum.UI.Droid/packages.config
+++ b/Nethereum.UI/Nethereum.UI.Droid/packages.config
@@ -1,7 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EdjCase.JsonRpc.Client" version="1.3.1" targetFramework="monoandroid60" />
-  <package id="EdjCase.JsonRpc.Core" version="1.3.1" targetFramework="monoandroid60" />
+  <package id="Common.Logging.Core" version="3.4.1" targetFramework="monoandroid71" />
   <package id="Microsoft.CSharp" version="4.3.0" targetFramework="monoandroid60" />
   <package id="Microsoft.NETCore.Platforms" version="2.0.0" targetFramework="monoandroid60" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="monoandroid60" />
@@ -11,21 +10,22 @@
   <package id="MvvmCross.Forms" version="5.0.2" targetFramework="monoandroid71" />
   <package id="MvvmCross.Platform" version="5.0.2" targetFramework="monoandroid71" />
   <package id="MvvmCross.Plugin.Messenger" version="5.0.2" targetFramework="monoandroid71" />
-  <package id="Nethereum.ABI" version="2.0.1" targetFramework="monoandroid60" />
-  <package id="Nethereum.Contracts" version="2.0.1" targetFramework="monoandroid60" />
-  <package id="Nethereum.Hex" version="2.0.1" targetFramework="monoandroid60" />
-  <package id="Nethereum.JsonRpc.Client" version="2.0.1" targetFramework="monoandroid60" />
-  <package id="Nethereum.JsonRpc.RpcClient" version="2.0.1" targetFramework="monoandroid60" />
-  <package id="Nethereum.KeyStore" version="2.0.1" targetFramework="monoandroid60" />
-  <package id="Nethereum.RLP" version="2.0.1" targetFramework="monoandroid60" />
-  <package id="Nethereum.RPC" version="2.0.1" targetFramework="monoandroid60" />
-  <package id="Nethereum.Signer" version="2.0.1" targetFramework="monoandroid60" />
-  <package id="Nethereum.StandardTokenEIP20" version="2.0.1" targetFramework="monoandroid60" />
-  <package id="Nethereum.Util" version="2.0.1" targetFramework="monoandroid60" />
-  <package id="Nethereum.Web3" version="2.0.1" targetFramework="monoandroid60" />
-  <package id="NETStandard.Library" version="2.0.1" targetFramework="monoandroid71" />
+  <package id="Nethereum.ABI" version="2.5.1" targetFramework="monoandroid71" />
+  <package id="Nethereum.Accounts" version="2.5.1" targetFramework="monoandroid71" />
+  <package id="Nethereum.Contracts" version="2.5.1" targetFramework="monoandroid71" />
+  <package id="Nethereum.Hex" version="2.5.1" targetFramework="monoandroid71" />
+  <package id="Nethereum.JsonRpc.Client" version="2.5.1" targetFramework="monoandroid71" />
+  <package id="Nethereum.JsonRpc.RpcClient" version="2.5.1" targetFramework="monoandroid71" />
+  <package id="Nethereum.KeyStore" version="2.5.1" targetFramework="monoandroid71" />
+  <package id="Nethereum.RLP" version="2.5.1" targetFramework="monoandroid71" />
+  <package id="Nethereum.RPC" version="2.5.1" targetFramework="monoandroid71" />
+  <package id="Nethereum.Signer" version="2.5.1" targetFramework="monoandroid71" />
+  <package id="Nethereum.StandardTokenEIP20" version="2.5.1" targetFramework="monoandroid71" />
+  <package id="Nethereum.Util" version="2.5.1" targetFramework="monoandroid71" />
+  <package id="Nethereum.Web3" version="2.5.1" targetFramework="monoandroid71" />
+  <package id="NETStandard.Library" version="2.0.3" targetFramework="monoandroid71" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="monoandroid60" />
-  <package id="Portable.BouncyCastle" version="1.8.1.1" targetFramework="monoandroid60" />
+  <package id="Portable.BouncyCastle" version="1.8.2" targetFramework="monoandroid71" />
   <package id="System.AppContext" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.Collections" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="monoandroid60" />
@@ -73,13 +73,21 @@
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="monoandroid60" />
   <package id="Xam.Plugins.Forms.ImageCircle" version="1.8.1" targetFramework="monoandroid60" />
-  <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="23.3.0" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.Design" version="23.3.0" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.v4" version="23.3.0" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.v7.AppCompat" version="23.3.0" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.v7.CardView" version="23.3.0" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.v7.MediaRouter" version="23.3.0" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.v7.RecyclerView" version="23.3.0" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.Vector.Drawable" version="23.3.0" targetFramework="monoandroid71" />
-  <package id="Xamarin.Forms" version="2.4.0.282" targetFramework="monoandroid60" />
+  <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="25.4.0.2" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.Annotations" version="25.4.0.2" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.Compat" version="25.4.0.2" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.Core.UI" version="25.4.0.2" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.Core.Utils" version="25.4.0.2" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.Design" version="25.4.0.2" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.Fragment" version="25.4.0.2" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.Media.Compat" version="25.4.0.2" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.Transition" version="25.4.0.2" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.v4" version="25.4.0.2" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.v7.AppCompat" version="25.4.0.2" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.v7.CardView" version="25.4.0.2" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.v7.MediaRouter" version="25.4.0.2" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.v7.Palette" version="25.4.0.2" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.v7.RecyclerView" version="25.4.0.2" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.Vector.Drawable" version="25.4.0.2" targetFramework="monoandroid71" />
+  <package id="Xamarin.Forms" version="3.1.0.530888-pre2" targetFramework="monoandroid71" />
 </packages>
